Closed
Bug 1221881
Opened 10 years ago
Closed 10 years ago
"ASSERTION: Should have state machine"
Categories
(Core :: Audio/Video: Playback, defect, P1)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
mozilla45
People
(Reporter: jruderman, Assigned: jwwang)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
|
422 bytes,
text/html
|
Details | |
|
9.96 KB,
text/plain
|
Details | |
|
40 bytes,
text/x-review-board-request
|
cpearce
:
review+
lizzard
:
approval-mozilla-aurora+
lizzard
:
approval-mozilla-beta+
|
Details |
###!!! ASSERTION: Should have state machine.: 'mDecoderStateMachine != nullptr', file dom/media/MediaDecoder.cpp, line 559
Testcase is the same as in bug 1221370, except for the last statement:
- vid.mozCaptureStreamUntilEnded();
+ vid.autoplay = true
| Reporter | ||
Comment 1•10 years ago
|
||
Updated•10 years ago
|
Component: Audio/Video → Audio/Video: Playback
Updated•10 years ago
|
Priority: -- → P1
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → jwwang
| Assignee | ||
Comment 2•10 years ago
|
||
Here is what happened:
1. |ms.endOfStream("network")| propagates network to the media element.
https://hg.mozilla.org/mozilla-central/file/cc473fe5dc512c450634506f68cbacfb40a06a23/dom/media/mediasource/MediaSource.cpp#l329
2. MediaDecoder::Shutdown() is called, and |mDecoderStateMachine| is cleared later.
3. autoplay kicks in and MediaDecoder::Play() is called to hit the assertion.
https://hg.mozilla.org/mozilla-central/file/cc473fe5dc512c450634506f68cbacfb40a06a23/dom/html/HTMLMediaElement.cpp#l3989
| Assignee | ||
Comment 3•10 years ago
|
||
| Assignee | ||
Comment 4•10 years ago
|
||
Bug 1221881 - HTMLMediaElement::NetworkError() should clear mDecoder. See bug 1221881 comment 2 for the root cause. r=cpearce.
Attachment #8685849 -
Flags: review?(cpearce)
Comment 5•10 years ago
|
||
I wonder if this will fix bug 1221370
| Assignee | ||
Comment 6•10 years ago
|
||
It does, but I would still like to know the root cause of bug 1221370. I think it might help to log the name of the task queue when debugging dispatch failures.
Comment 7•10 years ago
|
||
awesome.
should I mark 1221370 as a duplicate?
| Assignee | ||
Comment 8•10 years ago
|
||
I think bug 1221370 might be resulted another root cause. It should be worth digging a bit to know the truth.
Also I think it is time to develop a tool to facilitate debugging dispatch failures.
| Assignee | ||
Comment 9•10 years ago
|
||
(In reply to JW Wang [:jwwang] from comment #4)
> Created attachment 8685849 [details]
> MozReview Request: Bug 1221881 - HTMLMediaElement::NetworkError() should
> clear mDecoder. See bug 1221881 comment 2 for the root cause. r=cpearce.
>
> Bug 1221881 - HTMLMediaElement::NetworkError() should clear mDecoder. See
> bug 1221881 comment 2 for the root cause. r=cpearce.
Since MediaDecoder::NetworkError() calls MediaDecoder::Shutdown(), we should clear mDecoder for HTMLMediaElement to prevent it from calling into MediaDecoder functions.
| Assignee | ||
Comment 10•10 years ago
|
||
Comment on attachment 8685849 [details]
MozReview Request: Bug 1221881 - HTMLMediaElement::NetworkError() should clear mDecoder. See bug 1221881 comment 2 for the root cause. r=cpearce.
Review request updated; see interdiff: https://reviewboard.mozilla.org/r/24915/diff/1-2/
| Assignee | ||
Comment 11•10 years ago
|
||
(In reply to JW Wang [:jwwang] from comment #10)
> Comment on attachment 8685849 [details]
> MozReview Request: Bug 1221881 - HTMLMediaElement::NetworkError() should
> clear mDecoder. See bug 1221881 comment 2 for the root cause. r=cpearce.
>
> Review request updated; see interdiff:
> https://reviewboard.mozilla.org/r/24915/diff/1-2/
Hi Chris,
Can you review this patch? Thanks.
Flags: needinfo?(cpearce)
Comment 12•10 years ago
|
||
Comment on attachment 8685849 [details]
MozReview Request: Bug 1221881 - HTMLMediaElement::NetworkError() should clear mDecoder. See bug 1221881 comment 2 for the root cause. r=cpearce.
https://reviewboard.mozilla.org/r/24915/#review22919
Attachment #8685849 -
Flags: review?(cpearce) → review+
| Assignee | ||
Comment 14•10 years ago
|
||
Thanks for the review!
Comment 16•10 years ago
|
||
Comment 17•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Comment 18•10 years ago
|
||
Comment on attachment 8685849 [details]
MozReview Request: Bug 1221881 - HTMLMediaElement::NetworkError() should clear mDecoder. See bug 1221881 comment 2 for the root cause. r=cpearce.
Approval Request Comment
[Feature/regressing bug #]: 1221881
[User impact if declined]: Crashes. Bug 1221370 has information related to crash rates and test case to reproduce the crash
[Describe test coverage new/current, TreeHerder]: in central, manually verified
[Risks and why]: Low, properly clearing a variable on shutdown
[String/UUID change made/needed]: none
Attachment #8685849 -
Flags: approval-mozilla-beta?
Attachment #8685849 -
Flags: approval-mozilla-aurora?
Comment 19•10 years ago
|
||
Does this affect 43? Bug 1221370 only has 44/45 marked as affected. This seems good to uplift to 44 though.
Comment 20•10 years ago
|
||
Never mind, looks like it has been an issue since firefox 40.
Comment 21•10 years ago
|
||
Comment on attachment 8685849 [details]
MozReview Request: Bug 1221881 - HTMLMediaElement::NetworkError() should clear mDecoder. See bug 1221881 comment 2 for the root cause. r=cpearce.
Crash/assertion fix, recent regression. OK to uplift to aurora and beta.
Attachment #8685849 -
Flags: approval-mozilla-beta?
Attachment #8685849 -
Flags: approval-mozilla-beta+
Attachment #8685849 -
Flags: approval-mozilla-aurora?
Attachment #8685849 -
Flags: approval-mozilla-aurora+
Comment 22•10 years ago
|
||
| bugherder uplift | ||
Comment 23•10 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•